fix skills section on iPhone

--- a/styles.css
+++ b/styles.css
@@ -418,6 +418,7 @@ header ul li {
         display: flex;
         flex-wrap: wrap;
         gap: 4rem;
+        aspect-ratio: unset;
     }
 
     .skill-icon {
